--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,117 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require font-awesome
+ *
  *= require_tree .
  *= require_self
  */
+
+html {
+  height: 100%;
+}
+
+body {
+  height: inherit;
+}
+
+.centered {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hide {
+  display: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.bg-cover {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.header {
+  padding-top: 0.5em;
+  margin-bottom: 1em;
+}
+
+.content-subhead {
+  margin: 1em 0 0.5em 0;
+}
+
+/* colored border on top */
+body {
+  border-style: solid;
+  border-width: 0.3em 0 0 0;
+  border-color: #28587B;
+}
+
+#menu, .menu-link {
+  top: 0.3em;
+}
+
+/* Forms */
+
+@media screen and (min-width: 35.5em) {
+  .form-label {
+    width: 80%;
+    padding-right: 20%;
+    text-align: right;
+  }
+}
+
+.form-label {
+  display: inline-block;
+  margin-top: 0.2em;
+}
+
+.form-field {
+  display: inline-block;
+  margin-bottom: 0.7em;
+}
+
+.form-aligned .form-field {
+  width: 100%;
+}
+
+input[type="text"], input[type="search"], textarea, select {
+  width: 100%;
+}
+
+/* Search */
+.search {
+  padding: 1em 0;
+  width: 100%;
+  text-align: center;
+}
+
+.search .form-field {
+  width: 80%;
+}
+
+/* Side menu */
+.pure-menu-disabled {
+  padding: inherit;
+}
+
+/* Inplace Editor */
+h2 .inplace-editor-edit {
+  display:none;
+}
+h2:hover span.inplace-editor-edit {
+  display:inline;
+}
+
+/* Buttons */
+.button-xlarge {
+  font-size: 150%;
+}
