--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -11,6 +11,8 @@
         <%= content_for?(:main_content) ? yield(:main_content) : yield %>
       </div>
     </div>
+
+    <%= render 'layouts/side_menu' %>
   </div>
 <% end %>
 
