--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -6,6 +6,10 @@
 
 <%= ui_content_container do %>
   <%= ui_content_section do %>
-    trial here
+    <%= ui_form(path: card_attempts_path(@card), layout: ComponentHelper::FORM_ALIGNED) do |f| %>
+      <%= ui_password_field(name: "attempt", label: "Answer") %>
+
+      <%= ui_submit("Try") %>
+    <% end %>
   <% end %>
 <% end %>
