--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -7,7 +7,7 @@
 <%= ui_content_container do %>
   <%= ui_content_section do %>
     <%= ui_form(path: card_attempts_path(@card), layout: ComponentHelper::FORM_ALIGNED) do |f| %>
-      <%= ui_password_field(name: "attempt", label: "Answer") %>
+      <%= ui_password_field(name: "attempt", label: "Answer", html_options: { autofocus: true }) %>
       <%= ui_submit("Try") %>
     <% end %>
 
