--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= ui_form(object: @card, layout: ComponentHelper::FORM_ALIGNED) do |f| %>
+<%= ui_form(object: @card) do |f| %>
   <%= ui_text_field(name: "question", label: "Question") %>
   <%= ui_password_field(name: "answer", label: "Answer") %>
 
