--- a/app/views/layouts/_side_menu.html.erb
+++ b/app/views/layouts/_side_menu.html.erb
@@ -1,23 +1,34 @@
-<!-- Menu toggle -->
-<a href="#menu" id="menuLink" class="menu-link">
-  <!-- Hamburger icon -->
-  <span></span>
-</a>
+<nav class="flex items-center justify-between flex-wrap bg-gray-800 p-6 fixed w-full z-10 top-0">
+  <div class="flex items-center flex-shrink-0 text-white mr-6">
+    <%= link_to root_path, class: "text-white no-underline hover:text-white hover:no-underline" do %>
+      <span class="text-2xl pl-2"><%= application_name %></span>
+    <% end %>
+  </div>
 
-<div id="menu">
-  <div class="pure-menu">
-    <%= link_to application_name, root_path, class: 'pure-menu-heading' %>
+  <div class="block lg:hidden">
+    <button
+      id="nav-toggle"
+      class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-white hover:border-white"
+    >
+      <svg
+        class="fill-current h-3 w-3"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <title>Menu</title>
+        <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
+      </svg>
+    </button>
+  </div>
 
-    <ul class="pure-menu-list">
-      <% if logged_in? %>
-        <%= ui_side_menu_link("Cards", cards_path, active: cards_section?) %>
-
-        <%= yield(:side_menu) if content_for?(:side_menu) %>
-
-        <%= ui_side_menu_link("New card", new_card_path, active: new_card_section?, separated: true) %>
-
-        <%= ui_side_menu_link("Sign out", logout_path, separated: true, method: :delete) %>
-      <% end %>
+  <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block pt-6 lg:pt-0" id="nav-content">
+    <ul class="list-reset lg:flex justify-end flex-1 items-center">
+    <% if logged_in? %>
+      <%= ui_side_menu_link("Cards", cards_path, active: cards_section?) %>
+      <%= yield(:side_menu) if content_for?(:side_menu) %>
+      <%= ui_side_menu_link("New card", new_card_path, active: new_card_section?) %>
+      <%= ui_side_menu_link("Sign out", logout_path, method: :delete) %>
+    <% end %>
     </ul>
   </div>
-</div>
+</nav>
